# memoria

./: .dev.vars.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  VERSION.json  wrangler.toml  wrangler.toml.example
.github/workflows/: codeql.yml  rust.yml
evals/: memoria_evals.md  oneiro_evals.md  run_all.sh  run_eval.sh
infra/: main.tf
memoria-skill/: SKILL.md
memoria-skill/references/: architecture.md
memoria-skill/scripts/: eval.py
migrations/: 0001_initial.sql  0002_lineage.sql  0003_rem_audit.sql  0004_cluster_decisions.sql  0005_dialectic_audit.sql  0006_dialectic_dispatch.sql
oneiro-skill/: SKILL.md
oneiro-skill/references/: architecture.md
oneiro-skill/scripts/: eval.py
scripts/: backup.sh  com.memoria.backup.plist  com.oneiro.backup.plist  consolidate.md  consolidate.sh  dialectic.md  dialectic.sh  migrate-from-memoria.sh  setup.sh  subconscious.md  sync.sh  think.sh
src/: api_key.rs  audit.rs  auth.rs  auth_ctx.rs  dialectic_validation.rs  embed.rs  key_rate.rs  lib.rs  main.rs  memory.rs  rem.rs  store.rs  worker_admin.rs  worker_audit.rs  worker_auth_ctx.rs  worker_dialectic.rs  worker_dialectic_audit.rs  worker_dialectic_dispatch.rs  worker_embed.rs  worker_mcp.rs  worker_mmr.rs  worker_oauth.rs  worker_rem.rs  worker_rem_audit.rs  worker_store.rs  worker_vectorize.rs  worker_version.rs
