[package]
name = "memoria"
version = "0.1.0"
edition = "2024"
description = "Cognitive memory system for model continuity"
license = "MIT"

# Worker library target — CLA-84 Cloudflare migration. `cdylib` is what
# wasm-bindgen needs; `rlib` keeps it linkable from the bin targets so
# we can share types during the transition.
[lib]
name = "memoria"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "memoria"
path = "src/main.rs"

[[bin]]
name = "memoria-rem"
path = "src/rem.rs"

# ──────────────────────────────────────────────────────────────────────
# Universal dependencies — compile clean for both native and wasm32.
# Anything that pulls in OS syscalls / sockets / FS / native TLS lives
# under the target-specific sections below.
# ──────────────────────────────────────────────────────────────────────
[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP types and macros — explicitly skipping default features so the
# transport implementations (which pull in axum/tower/hyper on native)
# aren't pulled into the universal graph. Native bins re-add them in
# the cfg-gated block. wasm32 uses just server + macros.
rmcp = { version = "=1.2.0", default-features = false, features = ["server", "macros"] }
schemars = "0.8"

# Time, IDs, basic primitives
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
hex = "0.4"

# Crypto for auth (argon2 hashing, HMAC token signing) — all pure-Rust,
# wasm-compatible.
argon2 = "0.5"
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"

# HTTP primitive types (not the server) — used by handlers + URL parsing
http = "1"
url = "2"
bytes = "1"

# Image handling — scale on recall, base64 encode for MCP ImageContent
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"

# Logging — works on both targets
tracing = "0.1"

# ──────────────────────────────────────────────────────────────────────
# Wasm32 (Cloudflare Workers) — the new target for memoria's MCP surface.
# ──────────────────────────────────────────────────────────────────────
[target.'cfg(target_family = "wasm")'.dependencies]
worker = "0.6"
serde-wasm-bindgen = "0.6"
# Wasm32-unknown-unknown has no OS, so getrandom needs a JS shim for
# entropy. Pulls into rand + uuid transitively. The `wasm_js` feature is
# the modern (0.3+) name; older code uses `js`.
getrandom = { version = "0.3", features = ["wasm_js"] }

# ──────────────────────────────────────────────────────────────────────
# Native — the existing local-server stack. Keeps `memoria` (MCP server
# bin) and `memoria-rem` (consolidator bin) buildable during the
# migration. main.rs and friends keep using these until the worker
# implementation reaches feature parity (phase 6+) and the local bin
# is retired in favour of `wrangler deploy`.
# ──────────────────────────────────────────────────────────────────────
[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Full tokio runtime for the native HTTP server
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Native MCP transports — adds streamable-HTTP-server (uses hyper/tower)
# on top of the universal server+macros features. Cargo unions features
# for the same dep, so the native build gets all four.
rmcp = { version = "=1.2.0", features = ["transport-io", "transport-streamable-http-server"] }

# Memory store (rusqlite — replaced by D1 binding on the worker side)
rusqlite = { version = "0.31", features = ["bundled"] }

# Embeddings (ureq → Ollama, replaced by Workers AI on the worker side)
ureq = { version = "3", features = ["json"] }

# Native HTTP server stack
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
http-body-util = "0.1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
